Color picker doesn't work properly with mipmaps turned off #44882

Closed
opened 2015-05-29 12:06:30 +02:00 by item412 · 6 comments

System Information
win7

Blender Version
Broken: 2.74

Short description of error
dropper doesn't pick exact color of pixel

2403c8e93d980edfde6e6d0134a0e441.gif

0a31712b175a62a1eefa239bbccdae2e.gif

test.blend

**System Information** win7 **Blender Version** Broken: 2.74 **Short description of error** dropper doesn't pick exact color of pixel ![2403c8e93d980edfde6e6d0134a0e441.gif](https://archive.blender.org/developer/F181288/2403c8e93d980edfde6e6d0134a0e441.gif) ![0a31712b175a62a1eefa239bbccdae2e.gif](https://archive.blender.org/developer/F181290/0a31712b175a62a1eefa239bbccdae2e.gif) [test.blend](https://archive.blender.org/developer/F181292/test.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @item412

Added subscriber: @item412

Added subscriber: @mont29

Added subscriber: @mont29

Please check with latest build from our buildbot. Looks like there is no more 'dragging' of the dropper now...

Please check with latest build from [our buildbot](https://builder.blender.org/download). Looks like there is no more 'dragging' of the dropper now...

This issue was referenced by 2f2f7c0e87

This issue was referenced by 2f2f7c0e875b2cfcd7b5caa0af532401deac67be

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44882
No description provided.